--- a/ID3.html
+++ b/ID3.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الرقم القومي المصري | National ID Analyzer</title>
+    <title>الرقم القومي  | National ID Analyzer</title>
     <style>
         /* General Styling */
         body {
@@ -324,7 +324,7 @@
 
         const results = [
             { key: "العمر", value: `${ageYears} سنة, ${ageMonths} شهر, ${ageDays} يوم` },
-            { key: "عدد الأيام المتبقية للعيد", value: `${daysLeft} يوم` }
+            { key: "عدد الأيام المتبقية لعيد ميلادك", value: `${daysLeft} يوم` }
         ];
 
         showPopup(results);
