--- a/ID3.html
+++ b/ID3.html
@@ -286,7 +286,7 @@ const registrationYear = `${centuryPrefix}${id.substring(1, 3)}`; // تسجيل 
             { key: "العمر", value: `${ageYears} سنة, ${ageMonths} شهر, ${ageDays} يوم` },
             { key: "الجنس", value: gender },
             { key: "المحافظة", value: governorate },
-            { key: "سنة تسجيل الرقم القومي", value: registrationYear }
+            { key: "سنة الميلاد", value: registrationYear }
         ];
 
         showPopup(results);
