--- a/ID3.html
+++ b/ID3.html
@@ -137,7 +137,7 @@
 <body>
 
 <div class="container">
-    <h1>تحليل الرقم القومي المصري</h1>
+    <h1> حاسبة الاعمار  </h1>
 
     <!-- Language Selection -->
     <select id="language" onchange="changeLanguage()">
