--- a/age.html
+++ b/age.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>الرقم القومي المصري | National ID Analyzer</title>
+    <title>   | National ID Analyzer</title>
     <style>
         /* General Styling */
         body {
